@@ -333,6 +333,11 @@ se		return SE;
 "->"			{ return UCC_POINTS; }
 "::"			{ return UCC_SCOPE; }
 "<<"			{ return UCC_INSERT; }
+"+="			{ return ADD_EQ; }
+"-="			{ return SUB_EQ; }
+"*="			{ return MUL_EQ; }
+"/="			{ return DIV_EQ; }
+"%="			{ return MOD_EQ; }
 
 "# "[0-9]+\ \"[^"]*\".*\n	{ Set_location(yytext + 2); Uc_location::increment_cur_line(); }
 "#line "[0-9]+\ \"[^"]*\".*\n	{ Set_location(yytext + 6); Uc_location::increment_cur_line(); }
